<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".Views.EditDialogFragment">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/taskLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/taskLabel"
            android:layout_columnWeight="1"/>

        <EditText
            android:id="@+id/taskET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/taskAddHint"
            android:layout_columnWeight="3"/>

        <TextView
            android:id="@+id/infoLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/infoLabel"
            android:layout_columnWeight="1"/>

        <EditText
            android:id="@+id/infoET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:ems="10"
            android:hint="@string/infoAddHint"
            android:inputType="textMultiLine"
            android:layout_columnWeight="3"/>

        <TextView
            android:id="@+id/dueDateLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/dueDateLabel"
            android:layout_columnWeight="1"/>

        <EditText
            android:id="@+id/dueDateET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:ems="10"
            android:inputType="date"
            android:layout_columnWeight="3"/>

        <TextView
            android:id="@+id/priorityLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/priorityLabel"
            android:layout_columnWeight="1"/>

        <Spinner
            android:id="@+id/prioritySpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="3"
            android:entries="@array/priorityArray"
            android:layout_columnWeight="3"/>
    </GridLayout>
</android.support.constraint.ConstraintLayout>